🎨 Fix z-index

--- a/src/scss/modules/_app.scss
+++ b/src/scss/modules/_app.scss
@@ -73,7 +73,7 @@
 
   .block-illustration-bg {
     position: absolute;
-    z-index: -1;
+    z-index: -2;
     top: 0;
     left: 0;
     width: 100%;
