--- a/src/scss/partials/_footer.scss
+++ b/src/scss/partials/_footer.scss
@@ -1,4 +1,6 @@
 .footer {
+  position: relative;
+  z-index: 2;
   margin-top: -50px;
   padding: 100px 0 3.125rem;
   background-color: $apple;
